Switch to grid, set gaps properly, todo: fix duplicate lessons

--- a/flask_app/static/styles/main.css
+++ b/flask_app/static/styles/main.css
@@ -2,16 +2,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .week-div {
-    display: flex;
-    flex-direction: row;
-}
-.day-div {
+    display: grid;
+    grid: repeat(10, 50px) / repeat(5, 100px);
+    gap: 6px 12px;
     margin: 10px;
     text-align: center;
 }
-.lesson-div {
-    margin: 10px 0px;
+.hour-div {
+    display: flex;
     height: 50px;
-    background-color: gray;
+    background-color: lightgray;
     font-size: small;
 }
